hphp/hack/test/typecheck/ffp/function_static_bad.php.exp
File "function_static_bad.php", line 4, characters 7-11:
Top-level functions cannot be declared static (Parsing[1002])
